--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "ejs-express": "^1.0.0",
     "express": "^4.21.0",
+    "firebase": "^10.14.0",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7"
   }
